<resources>
    <string name="app_name">Two Activities</string>
    <string name="second_activity">Second Activity</string>
    <string name="sending_button">Send</string>
    <string name="text_header">Received Message</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>